provide some quick repairs to connect frontend